--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,8 +36,13 @@ jobs:
 
       - name: Build project
         run: |
+          export TOOLCHAIN=$ANDROID_NDK/build/cmake/android.toolchain.cmake
+
           cd rust
-          cargo ndk -t ${{ matrix.target-simple }} build --release
+          cargo ndk -t ${{ matrix.target-simple }} build --release \
+              -- \
+              -DCMAKE_TOOLCHAIN_FILE=$TOOLCHAIN \
+              -DANDROID_ABI=armeabi-v7a
 
       - name: Upload
         uses: actions/upload-artifact@v4
