--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,6 +14,10 @@ jobs:
     strategy:
       matrix:
         include:
+          - build: android-aarch64
+            target-triple: aarch64-linux-android
+            target-simple: arm64-v8a
+
           - build: android-arm
             target-triple: armv7-linux-androideabi
             target-simple: armeabi-v7a
@@ -42,7 +46,7 @@ jobs:
           cd rust
           cargo ndk -t ${{ matrix.target-simple }} build --release
 
-      - name: Upload
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          path: ./*
+          path: rust/target/${{ matrix.target-triple }}/release/*.so
