--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -82,7 +82,7 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
-          cache: 'gradle'
+          cache: 'maven'
 
       - name: Build with MVN
         run: |
