--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,18 +15,22 @@ jobs:
           - build: linux-x64
             os: ubuntu-latest
             target-triple: x86_64-unknown-linux-gnu
+            lib-extension: so
 
           - build: linux-x86
             os: ubuntu-latest
             target-triple: i686-unknown-linux-gnu
+            lib-extension: so
 
           - build: windows-x64
             os: windows-2019
             target-triple: x86_64-pc-windows-msvc
+            lib-extension: dll
 
           - build: windows-x86
             os: windows-2019
             target-triple: i686-pc-windows-msvc
+            lib-extension: dll
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -48,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.build }}
-          path: rust/target/${{ matrix.target-triple }}/release/*.so
+          path: rust/target/${{ matrix.target-triple }}/release/*.${{ matrix.lib-extension }}
 
 
   build-rust-android:
